# license_scanner

./: .gitignore  HISTORY.md  HISTORY.rst  Investigate_licenses.ipynb  MANIFEST.in  README.md  all_requirements.txt  azure-pipelines.yml  compare_methods.ipynb  copy_pkg_resources.py  copy_pkg_resources_2.py  install_alot.py  integration.py  integration_requirements.txt  iter_modules.txt  mismatches.csv  pipfreeze.txt  pull_request_template.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup3.cfg  setup3.py  standard_PR_message.md  test_1.csv
.github/workflows/: python-licenses-tests.yml  python-publish.yml  tests.yml
dev/: check_spdx.py  readme.md  requirements.txt
license_scanner/: __init__.py  cli.py  get_all_licenses.py
license_scanner/parse_license/: __init__.py  licenses_synonyms.py  main.py
src/: integration.py
src/license_scanner/: __init__.py  cli.py  get_all_licenses.py
src/license_scanner/get_all_packages/: __init__.py  main.py
src/license_scanner/parse_license/: licenses_synonyms.py  main.py
src/license_scanner/spdx_logic/: __init__.py  main.py
tests/cli/: test_whitelist.py
tests/extreme/: test_all_licenses.py
tests/integration_test/: requirements.txt  requirements_3.10.txt  requirements_3.11.txt  requirements_3.12.txt  requirements_3.13.txt  requirements_3.14.txt  requirements_3.9.txt  test_get_license.py  test_get_packages.py  test_whitelist.py  test_whitelisting.py
tests/unit/: test_parse_license.py  test_spdx_logic.py  test_spdx_logic_split_expression.py  test_whitelist.py
