[project]
name = "license_scanner"
dynamic = ["version"]
dependencies = ["tomli>=1.1.0; python_version < '3.11'"]
readme = "README.md"
keywords = ["license", "scanner", "checker"]
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Tom Nijhof-Verhees", email = "nijhof.dns@gmail.com" }]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/wagenrace/license_scanner"
documentation = "https://github.com/wagenrace/license_scanner"
source = "https://github.com/wagenrace/license_scanner"
download = "https://pypi.org/project/license_scanner/#files"
tracker = "https://github.com/wagenrace/license_scanner/issues"
"release notes" = "https://github.com/wagenrace/license_scanner/blob/main/HISTORY.md"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.license_scanner]
allowed-licenses = [
  "MIT",
  "apache software license",
  "apache software license v2",
  "apache software license v3",
  "BSD license",
  "BSD 3-clause license",
  "BSD 2-clause license",
  "BSD 0-clause license",
  'GNU lesser general public license',
  'GNU lesser general public license v2',
  'GNU lesser general public license v3',
  'Python software foundation license',
  'Python software foundation license v1',
  'Python software foundation license v2',
  'Mozilla public license 2.0 (mpl 2.0)',
  "ISC license",
  'mozilla',
  "The Unlicense (Unlicense)",
  "ISC license (iscl)",
  "MIT-CMU License (MIT-CMU)",
]
allowed-packages = ["license_scanner"]

[project.scripts]
license_scanner = "license_scanner.cli:main"

[tool.hatch.version]
path = "src/license_scanner/__init__.py"
